--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: 1.0.1.{build}
+version: 1.0.{build}
 skip_tags: true
 configuration: Release
 assembly_info:
@@ -17,6 +17,6 @@ build:
   verbosity: minimal
 test_script:
 - ps: >-
-    .\packages\OpenCover.4.5.3723\OpenCover.Console.exe -register:user -target:nunit-console.exe -register:user "-targetargs:""test\Simple.MemoryCache.UnitTest\bin\$env:CONFIGURATION\Simple.MemoryCache.UnitTest.dll"" /noshadow" -output:opencoverCoverage.xml
+    .\packages\OpenCover.4.5.3723\OpenCover.Console.exe -register:user -target:nunit-console.exe -register:user "-targetargs:""test\Simple.MemoryCache.UnitTest\bin\$env:CONFIGURATION\Simple.MemoryCache.UnitTest.dll" "test\Simple.MemoryCache.IntegrationTest\bin\$env:CONFIGURATION\Simple.MemoryCache.IntegrationTest.dll"" /noshadow" -output:opencoverCoverage.xml
 
     .\packages\coveralls.net.0.5.0\csmacnz.Coveralls.exe --opencover -i opencoverCoverage.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
