made some refactorings

--- a/src/Simple.MemoryCache/Simple.MemoryCache.csproj
+++ b/src/Simple.MemoryCache/Simple.MemoryCache.csproj
@@ -55,8 +55,11 @@
   <ItemGroup>
     <Compile Include="Converters\CacheItemPolicyConverter.cs" />
     <Compile Include="Converters\CacheItemPriorityConverter.cs" />
+    <Compile Include="Converters\ICacheItemPolicyConverter.cs" />
+    <Compile Include="Converters\ICacheItemPriorityConverter.cs" />
     <Compile Include="DI\DIContainer.cs" />
     <Compile Include="DI\MainModule.cs" />
+    <Compile Include="IMemoryCacher.cs" />
     <Compile Include="MemoryCacher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
